[gd_scene load_steps=14 format=3 uid="uid://cyaxkx7ajs3k8"]

[ext_resource type="Script" uid="uid://bd6ol6lajwjd0" path="res://hud/healthbar/health_bar2.gd" id="1_sw0fg"]
[ext_resource type="Texture2D" uid="uid://cmgpbabxuysuv" path="res://assets/icons/portraits/ken_port.png" id="3_4alg6"]
[ext_resource type="Script" uid="uid://3cbk2pjxlfp2" path="res://hud/healthbar/health_barp2.gd" id="3_sw0fg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wyv3d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2emr"]
bg_color = Color(0.17254902, 0.69411767, 0.58431375, 1)
skew = Vector2(-1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sw0fg"]
bg_color = Color(0.17283267, 0.17283267, 0.17283258, 1)
skew = Vector2(-1, 0)
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.27450982)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcw6b"]
bg_color = Color(1, 1, 1, 0)
skew = Vector2(-1, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sw0fg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qw17a"]
bg_color = Color(0, 0.6784314, 0.91764706, 1)
expand_margin_left = 3.0
shadow_color = Color(0, 0, 0, 0.27450982)
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ce1pg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65ek6"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w57nn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ht0r"]
bg_color = Color(0.6431373, 0.5411765, 0.81960785, 0)
border_width_right = 2
border_color = Color(0, 0, 0, 1)

[node name="canva_change" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sw0fg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="char_portrait" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1255, 27)
rotation = -3.1415927
scale = Vector2(0.389, -0.407)
texture = ExtResource("3_4alg6")

[node name="health_bar" type="ProgressBar" parent="CanvasLayer"]
z_index = 1
offset_left = 682.0
offset_top = 32.0
offset_right = 1222.0
offset_bottom = 50.0
theme_override_styles/background = SubResource("StyleBoxEmpty_wyv3d")
theme_override_styles/fill = SubResource("StyleBoxFlat_q2emr")
value = 60.0
fill_mode = 1
show_percentage = false
script = ExtResource("3_sw0fg")

[node name="damage_bar" type="ProgressBar" parent="CanvasLayer/health_bar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sw0fg")
theme_override_styles/fill = SubResource("StyleBoxFlat_vcw6b")
value = 80.0
fill_mode = 1
show_percentage = false

[node name="name_char" type="Label" parent="CanvasLayer/health_bar"]
layout_mode = 0
offset_left = 515.0
offset_top = 20.0
offset_right = 555.0
offset_bottom = 43.0
text = "Ken"
horizontal_alignment = 1

[node name="timer" type="Timer" parent="CanvasLayer/health_bar"]
wait_time = 0.4
one_shot = true

[node name="sp_bar" type="ProgressBar" parent="CanvasLayer/health_bar"]
z_index = 2
layout_mode = 0
offset_left = 367.0
offset_top = 620.0
offset_right = 567.0
offset_bottom = 640.0
theme_override_styles/background = SubResource("StyleBoxEmpty_sw0fg")
theme_override_styles/fill = SubResource("StyleBoxFlat_qw17a")
value = 25.0
rounded = true
fill_mode = 1
show_percentage = false

[node name="backbround" type="ProgressBar" parent="CanvasLayer/health_bar/sp_bar"]
z_index = 4
layout_mode = 0
offset_left = -4.0
offset_right = 199.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxEmpty_ce1pg")
theme_override_styles/fill = SubResource("StyleBoxFlat_65ek6")
value = 100.0
show_percentage = false

[node name="sp_250" type="ProgressBar" parent="CanvasLayer/health_bar/sp_bar"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_w57nn")
theme_override_styles/fill = SubResource("StyleBoxFlat_6ht0r")
value = 100.0
show_percentage = false

[node name="sp_500" type="ProgressBar" parent="CanvasLayer/health_bar/sp_bar"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_w57nn")
theme_override_styles/fill = SubResource("StyleBoxFlat_6ht0r")
value = 100.0
show_percentage = false

[node name="sp_750" type="ProgressBar" parent="CanvasLayer/health_bar/sp_bar"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_w57nn")
theme_override_styles/fill = SubResource("StyleBoxFlat_6ht0r")
value = 100.0
show_percentage = false
